# aiohttp-extracts

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  setup.py
aiohttp_extracts/: __init__.py  meta.py  parameters.py  wrappers.py
examples/: cookie.py  file.py  header.py  path.py  query.py  reqbody.py  request_attr.py
tests/: test_body.py  test_cookie.py  test_file.py  test_header.py  test_params.py  test_path.py  test_query.py  test_request.py  test_type_hint.py
